  * Support Android 2.2 backup manager
  * Add Polish translations

KeePassdroid (1.8.1)
  * Android 1.5 compatibility fixes

KeePassDroid (1.8)
  * Layout updates
  * Custom icon support
  
KeePassDroid (1.7.2)
  * Password generator from Tolga Onbay
  
KeePassDroid (1.7.1)
  * Fix timeout locking
  
KeePassDroid (1.7)
  * Add icon support from Tobias Selig
  
KeePassDroid (1.6.3)
  * Search tweaks from Johan Berts
  
KeePassDroid (1.6.2)
  * Fix layout issues on Android 1.5
  
KeePassDroid (1.6.1)
  * Add file browser for keyfiles
  * Add missing sdcard warning
  * Fix binary 64-bit keyfiles

KeePassDroid (1.6)
  * Add setting to control timeout duration.
  * Add file browser

KeePassDroid (1.5.9)
  * Bump target sdk to 8
  * Allow install to sdcard

KeePassDroid (1.5.8)
  * Update Russian translations
  * Add Nynorsk translations
  * Fix no compression .kdbx files
  
KeePassDroid (1.5.7)
  * KeePass 2.11 compatibility fixes

KeePassDroid (1.5.6)
  * Keyfile Fix

KeePassDroid (1.5.5)
  * Twofish support for .kdb
  * Refresh fixes

KeePassDroid (1.5.4)
  * Key file fixes
  * Implement sorting

KeePassDroid (1.5.3)
  * Remove debug tracing

KeePassDroid (1.5.2)
  * Various crash fixes
  * Fix group and entry deletion

KeePassDroid (1.5.1)
  * Handle .kdbx file extension

KeePassDroid (1.5)
  * Add beta read-only .kdbx support.

KeePassDroid (1.0.6)
  * Update Italian translations
  * Font size setting
  * URL decoding fix
  * TAN handling

KeePassDroid (1.0.5.1)
  * Restore timeout to 5 minutes instead of 20 seconds

KeePassDroid (1.0.5)
  * Fix search after lock bug
  * Add option to disable password masking by default
  * Change service handling

KeePassDroid (1.0.4)
  * Fix CRLF string issues

KeePassDroid (1.0.3)
  * Update Italian translations
  * Fix crash on saving entries
  * Fix way empty strings were being saved (this made it look like there was
    attachment in the Windows KeePass client).

KeePassDroid (1.0.2)
  * Fix file associations
