@@ -1,9 +1,11 @@
 Original author:
 Brian Pellin
 
+Achim Weimert
 Johan Berts - search patches
 Tobias Selig - icon support
 Tolga Onbay - password generator
+
 
 Translations:
 Diego Pierotto - Italian
