@@ -1,5 +1,6 @@
   * Support Android 2.2 backup manager
   * Add Polish translations
+  * Only show notifications if username and password exist
 
 KeePassdroid (1.8.1)
   * Android 1.5 compatibility fixes
